# OZblind_BE

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci,cd.yml  ci.yml
backend/: Dockerfile  settings.py  urls.py
backend/apps/boards/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/boards/migrations/: 0001_initial.py  0002_initial_boards_data.py
backend/apps/bookmarks/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/bookmarks/migrations/: 0001_initial.py  0002_initial.py
backend/apps/comments/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/comments/migrations/: 0001_initial.py  0002_alter_comment_parent_alter_comment_root.py  0002_initial.py  0003_remove_comment_parent.py  0004_alter_comment_post.py
backend/apps/notifications/: models.py  selializers.py  serializers.py  tests.py  urls.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/apps/posts/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_bestpost.py  0002_rename_bookmark_cnt_post_bookmark_count_and_more.py  0003_alter_post_bookmark_count_alter_post_dislike_count_and_more.py  (+3 more)
backend/apps/reactions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/tags/: apps.py
backend/apps/users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
(+19 files in other folders)
